<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sean.mmproject.MainActivity"
    android:background="@drawable/rock">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:id="@+id/button"
        android:layout_marginTop="110dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        android:background="#ff0000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/button2"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textSize="20sp"
        android:background="#ff0000"
        android:onClick="onButtonClick2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</RelativeLayout>
